--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -117,6 +117,7 @@
                     </li>
                     <li><a href="#">Develope Enviroment</a>
                         <ul class="dl-submenu">
+                            <li><a href="{{ site.url }}/eclipse/">Eclipse</a></li>
 					        <li><a href="{{ site.url }}/docker/">Docker</a></li> 
 					        <li><a href="{{ site.url }}/github/">Git hub</a></li>
 				        </ul>   
