--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -25,14 +25,13 @@ layout: compress
                     
                     {% for post in site.posts %}
                        {% if post.project == null %}
-                        <ul>
-                            <li class="wow fadeInLeft" data-wow-duration="1.5s">
+                        <ul style="bottom">
+                            <li class="wow fadeInLeft" data-wow-duration="1.5s" style="border-bottom: dotted;">
                                 <a class="zoombtn" href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
                                 <p>{{ post.excerpt }}</p>
                                 <a href="{{ site.url }}{{ post.url }}" class="btn zoombtn">read Read More</a>
                             </li>
-                        </ul>
-                     <hr>
+                        </ul> 
                       {% endif %}
                     {% endfor %}
                     
