--- a/_layouts/post-list.html
+++ b/_layouts/post-list.html
@@ -26,7 +26,7 @@ layout: compress
                     {% for post in site.posts %}
                        {% if post.project == null %}
                         <ul style="bottom">
-                            <li class="wow fadeInLeft" data-wow-duration="1.5s" style="border-bottom: double;border-color: lightgray;">
+                            <li class="wow fadeInLeft" data-wow-duration="1.5s" style="border-bottom: solid lightgray;">
                                 <a class="zoombtn" href="{{ site.url }}{{ post.url }}">{{ post.title }}</a>
                                 <p>{{ post.excerpt }}</p>
                                 <a href="{{ site.url }}{{ post.url }}" class="btn zoombtn">read Read More</a>
